dark mode bug

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -26,6 +26,9 @@ body {
   margin: 0px auto;
   padding: 15px 15px 0px 15px;
 
+  background-color: black;
+  color: white;
+
   @media (prefers-color-scheme: dark) {
 
     background-color: black;
@@ -35,8 +38,8 @@ body {
 
   @media (prefers-color-scheme: light) {
 
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
 
   }
 
